--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-PORT=3000
-FE_URL=http://localhost:4200
-SECRET_KEY=access
-SECRET_KEY_REFRESH=refresh
+PORT=
+FE_URL=
+SECRET_KEY=
+SECRET_KEY_REFRESH=
